--- a/gabung/sortirgabung.html
+++ b/gabung/sortirgabung.html
@@ -167,12 +167,11 @@
 <!-- ============================
      Bagian Bawah: Filter & Hapus
      ============================ -->
-<h2>🧹 Filter & Hapus Berdasarkan ID Produk Shopee</h2>
 
 <div class="filter-area">
   <p class="small-note">
     <strong>Masukkan ID produk Shopee</strong> (pisah koma, baris baru, atau masukkan link produk).  
-    Contoh: <code>22679185935</code> atau <code>https://shopee.co.id/product/944974083/22679185935</code>
+    Contoh: <code>22679185935</code>
   </p>
 
   <textarea id="idsInput" placeholder="Masukkan ID produk di sini..."></textarea>
