--- a/gabung/sortirgabung.html
+++ b/gabung/sortirgabung.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Produk Live MadGazan — + Filter ID Global</title>
+<title>Produk Live Filte Global</title>
 <style>
   body { font-family: Arial, sans-serif; margin: 15px; max-width: 900px; margin-inline:auto; background-color:#fffef9; color:#333; }
   h1,h2,h3 { color:#b36b00; text-align:center; }
@@ -102,7 +102,6 @@
      Bagian Atas: Produk Live
      ============================ -->
 <h1>Produk Live MadGazan</h1>
-<h2>Manajemen Shopee Live V7</h2>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
 
@@ -110,7 +109,7 @@
   <button id="clearInputLinksBtn">Clear Input Links</button>
   <button id="copyInputLinksBtn">Copy Input Links</button>
   <button id="hapusDuplikatBtn">Hapus Duplikat</button>
-  <button id="sortirPerTokoBtn">Sortir Berdasarkan Toko</button>
+
 </div>
 
 <h3>Daftar File TXT Produk</h3>
