--- a/tampilkan.html
+++ b/tampilkan.html
@@ -140,6 +140,8 @@
       { name: "Oktober1", file: "oktober1/index.html" },
       { name: "Detek Duplikat", file: "duplikat.html" },
       { name: "CSV Riset Upload", file: "read/index.html" },
+      { name: "Ada Sortir ID Produk", file: "gabung/sortirgabung.html" },
+      { name: "Edit Github", file: "editgithub/v1.html" },
       { name: "Editor Github", file: "read/h.html" },
     ];
 
